--- a/profile/index.html
+++ b/profile/index.html
@@ -13,7 +13,7 @@
     <div class="card" id="introduction">
       <h1>Siyabulela Ndiki </h1>
       <img src="images/romeprofile.jpg" class="img" alt="Profile of Siya" width="300px">
-      <h2>My Profile</h2>
+      <h2>My Profile< !/h2>
       <a href="https://www.youtube.com/watch?v=7rG5Ltuoxek" target="_blank">Discover isiXhosa</a>
       <p>Hi my name is Siyabulela Ndiki, after working as a radar technician for  the South Africa Navy ,
        I moved to Amsterdam to try and make a new life, currently looking at opportunities in Tech by becoming my own developer.
